[gd_scene load_steps=16 format=3 uid="uid://dnikmycpbi0dw"]

[ext_resource type="Script" uid="uid://bbeb3ochdubq4" path="res://scenes/level_3.gd" id="1_awbue"]
[ext_resource type="PackedScene" uid="uid://buukchwddsq16" path="res://player_tank/player_tank.tscn" id="2_jvhss"]
[ext_resource type="Material" uid="uid://ck5yy6bnnfhoe" path="res://environment/ground/test_ground.tres" id="4_3gpbg"]
[ext_resource type="PackedScene" uid="uid://2ikvy6rs6ql4" path="res://Collectibles/health_crate.tscn" id="5_nvv82"]
[ext_resource type="PackedScene" uid="uid://copk8kj3vfvb5" path="res://Collectibles/shell_crate.tscn" id="6_ad2oa"]
[ext_resource type="PackedScene" uid="uid://cx8myedc6brit" path="res://pause_menu/PauseMenu.tscn" id="7_1uvfy"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_b4fk2"]
sky_top_color = Color(0.352941, 0.745098, 0.964706, 1)
sky_horizon_color = Color(0.638235, 0.728525, 0.774426, 1)
ground_horizon_color = Color(0.638235, 0.728525, 0.774426, 1)

[sub_resource type="Sky" id="Sky_3scxv"]
sky_material = SubResource("ProceduralSkyMaterial_b4fk2")

[sub_resource type="Environment" id="Environment_kury7"]
background_mode = 2
sky = SubResource("Sky_3scxv")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="NavigationMesh" id="NavigationMesh_txjhr"]
vertices = PackedVector3Array(-248, 1, -14, -28.75, 1, -14, -28, 1, -16, -248, 1, -14, -28, 1, -16, -25.25, 1, -17.25, -25.25, 1, -248, -248, 1, -248, -17.75, 1, -7, -13.25, 1, -7, -12.75, 1, -8.75, -23, 1, -16.25, -17.75, 1, -7, -12.75, 1, -8.75, -5.75, 1, -15.75, -23, 1, -16.25, -5.75, 1, -15.75, -4.25, 1, -16.25, -4.25, 1, -248, -25.25, 1, -248, -25.25, 1, -17.25, -1.25, 1, -11.25, 1, 1, -8.75, 2.5, 1, -9.25, -0.75, 1, -13.25, 12.25, 1, -6.5, 12.75, 1, -9.75, 11, 1, -10.75, 2.5, 1, -9.25, -2.75, 1, -15.75, -1.25, 1, -14.25, 11.5, 1, -15.5, -1.25, 1, -14.25, -0.75, 1, -13.25, 2.5, 1, -9.25, 10.5, 1, -12.75, 11.5, 1, -15.5, -4.25, 1, -16.25, -2.75, 1, -15.75, 11.5, 1, -15.5, 13.5, 1, -16.25, 13.5, 1, -248, -4.25, 1, -248, 2.5, 1, -9.25, 11, 1, -10.75, 10.5, 1, -12.75, 25, 1, -11.75, 24.5, 1, -8.75, 33, 1, -6.75, 24, 1, -13.25, 25, 1, -11.75, 33, 1, -6.75, 24, 1, -13.25, 33, 1, -6.75, 34.5, 1, -5.75, 248, 1, -4.25, 34.5, 1, -5.75, 35, 1, -4.25, 248, 1, -4.25, 13.5, 1, -16.25, 24, 1, -13.25, 248, 1, -4.25, 248, 1, -248, 13.5, 1, -248, -13.5, 1, 14.5, -20.75, 1, -3.75, -22.25, 1, -3.5, -14, 1, 15.25, -11, 1, 248, -11, 1, 18.75, -12.25, 1, 18.75, -14, 1, 15.25, -22.25, 1, -3.5, -23.5, 1, -4.25, -13.5, 1, 18, -11, 1, 248, -12.25, 1, 18.75, -13.5, 1, 18, -13.5, 1, 18, -23.5, 1, -4.25, -28.75, 1, -14, -248, 1, -14, -248, 1, 248, -11, 1, 248, -8.25, 1, -4, -9, 1, -3.75, -8.25, 1, -2.5, -7.25, 1, -3, -4.5, 1, -3, -3.25, 1, -2, -0.5, 1, -4.75, -0.5, 1, -5.75, -8.25, 1, -4, -7.25, 1, -3, -4.5, 1, -3, -0.5, 1, -5.75, 0, 1, -7.5, -1.25, 1, -11.25, -3.25, 1, -2, 0.75, 1, -3.25, -0.5, 1, -4.75, 0, 1, -7.5, 1, 1, -8.75, -1.25, 1, -11.25, 12.75, 1, -9.75, 12.25, 1, -6.5, 13, 1, -6.25, 12.75, 1, -9.75, 13, 1, -6.25, 14, 1, -4.75, 20.5, 1, -4.75, 21, 1, -7.75, 32, 1, -0.25, 6.75, 1, 14.75, 5.25, 1, 15.75, 248, 1, -4.25, 35, 1, -4.25, 34, 1, -1, 21, 1, -3.75, 20.5, 1, -4.75, 14, 1, -4.75, 21, 1, -3.75, 14, 1, -4.75, 13, 1, -1, 22.5, 1, -2.75, 5.25, 1, 15.75, 4, 1, 15.75, 4, 1, 248, 22.5, 1, -2.75, 13, 1, -1, 11.75, 1, -0.25, 7.25, 1, 12.25, 6.75, 1, 14.75, 32, 1, -0.25, 11.75, 1, -0.25, 9.25, 1, -0.75, 6.75, 1, 11.5, 7.25, 1, 12.25, 34, 1, -1, 32, 1, -0.25, 5.25, 1, 15.75, 4, 1, 248, 248, 1, 248, 248, 1, -4.25, -8.25, 1, -2.5, -9, 1, -3.75, -10.25, 1, -3.5, -9, 1, -1.25, -12.25, 1, 13.5, -9.75, 1, 13.5, -8.5, 1, 2.25, -9, 1, 1.5, -9, 1, -1.25, -10.25, 1, -3.5, -11.25, 1, -4, -12.75, 1, -5.5, -13.25, 1, -7, -17.75, 1, -7, -18.25, 1, -5.25, -12.75, 1, -5.5, -18.25, 1, -5.25, -20.75, 1, -3.75, -13.5, 1, 14.5, -12.25, 1, 13.5, -9, 1, 1.5, -9, 1, -1.25, -11.25, 1, -4, -12.75, 1, -5.5, -9, 1, 1.5, 0.75, 1, -3.25, -3.25, 1, -2, -2.75, 1, -1.25, 0.75, 1, -3.25, -2.75, 1, -1.25, -2.75, 1, 1.5, 0.75, 1, -3.25, -2.75, 1, 1.5, -3.25, 1, 2.25, 2.75, 1, 10.5, 5.25, 1, 10.5, 5.5, 1, -1.75, -3.25, 1, 2.25, 2, 1, 11, 2.75, 1, 10.5, 5.25, 1, 10.5, 6.75, 1, 11.5, 9.25, 1, -0.75, 5.5, 1, -1.75, -7.75, 1, 15.5, 1.5, 1, 15, 1, 1, 13.75, -8.5, 1, 14, -7, 1, 3.25, -8.5, 1, 2.25, -9.75, 1, 13.5, -8.5, 1, 14, 1, 1, 13.75, 2, 1, 11, -3.25, 1, 2.25, -4.5, 1, 3.25, 1, 1, 12.25, 1, 1, 13.75, 1, 1, 12.25, -4.5, 1, 3.25, -7, 1, 3.25, 1.5, 1, 15, -7.75, 1, 15.5, -7.75, 1, 16.75, 2.75, 1, 15.75, 1.5, 1, 15, -7.75, 1, 16.75, -8.75, 1, 18.25, 4, 1, 15.75, 2.75, 1, 15.75, -8.75, 1, 18.25, -11, 1, 18.75, -11, 1, 248, 4, 1, 248)
polygons = [PackedInt32Array(2, 1, 0), PackedInt32Array(4, 3, 5), PackedInt32Array(5, 3, 6), PackedInt32Array(6, 3, 7), PackedInt32Array(10, 9, 8), PackedInt32Array(12, 11, 13), PackedInt32Array(13, 11, 14), PackedInt32Array(16, 15, 17), PackedInt32Array(17, 15, 20), PackedInt32Array(17, 20, 19), PackedInt32Array(17, 19, 18), PackedInt32Array(22, 21, 23), PackedInt32Array(23, 21, 24), PackedInt32Array(26, 25, 27), PackedInt32Array(27, 25, 28), PackedInt32Array(29, 31, 30), PackedInt32Array(33, 32, 34), PackedInt32Array(34, 32, 35), PackedInt32Array(35, 32, 36), PackedInt32Array(38, 37, 39), PackedInt32Array(39, 37, 40), PackedInt32Array(40, 37, 42), PackedInt32Array(40, 42, 41), PackedInt32Array(45, 44, 43), PackedInt32Array(48, 47, 46), PackedInt32Array(51, 50, 49), PackedInt32Array(53, 52, 54), PackedInt32Array(54, 52, 55), PackedInt32Array(58, 57, 56), PackedInt32Array(60, 59, 61), PackedInt32Array(61, 59, 63), PackedInt32Array(61, 63, 62), PackedInt32Array(64, 67, 65), PackedInt32Array(65, 67, 66), PackedInt32Array(70, 69, 68), PackedInt32Array(72, 71, 73), PackedInt32Array(73, 71, 74), PackedInt32Array(75, 77, 76), PackedInt32Array(79, 78, 80), PackedInt32Array(80, 78, 81), PackedInt32Array(81, 78, 83), PackedInt32Array(81, 83, 82), PackedInt32Array(85, 84, 86), PackedInt32Array(86, 84, 87), PackedInt32Array(90, 89, 91), PackedInt32Array(91, 89, 88), PackedInt32Array(93, 92, 94), PackedInt32Array(94, 92, 95), PackedInt32Array(95, 92, 96), PackedInt32Array(96, 92, 97), PackedInt32Array(100, 99, 98), PackedInt32Array(103, 102, 101), PackedInt32Array(104, 106, 105), PackedInt32Array(108, 107, 109), PackedInt32Array(109, 107, 110), PackedInt32Array(110, 107, 111), PackedInt32Array(114, 113, 112), PackedInt32Array(115, 117, 116), PackedInt32Array(120, 119, 118), PackedInt32Array(121, 124, 122), PackedInt32Array(122, 124, 123), PackedInt32Array(127, 126, 125), PackedInt32Array(129, 128, 130), PackedInt32Array(130, 128, 133), PackedInt32Array(130, 133, 131), PackedInt32Array(131, 133, 132), PackedInt32Array(136, 135, 137), PackedInt32Array(137, 135, 134), PackedInt32Array(139, 138, 140), PackedInt32Array(140, 138, 143), PackedInt32Array(140, 143, 141), PackedInt32Array(141, 143, 142), PackedInt32Array(145, 144, 146), PackedInt32Array(146, 144, 147), PackedInt32Array(150, 149, 151), PackedInt32Array(151, 149, 148), PackedInt32Array(152, 154, 153), PackedInt32Array(156, 155, 157), PackedInt32Array(157, 155, 158), PackedInt32Array(160, 159, 161), PackedInt32Array(161, 159, 164), PackedInt32Array(161, 164, 163), PackedInt32Array(161, 163, 162), PackedInt32Array(166, 165, 167), PackedInt32Array(167, 165, 168), PackedInt32Array(171, 170, 169), PackedInt32Array(174, 173, 172), PackedInt32Array(176, 175, 177), PackedInt32Array(177, 175, 180), PackedInt32Array(177, 180, 178), PackedInt32Array(178, 180, 179), PackedInt32Array(183, 182, 181), PackedInt32Array(185, 184, 186), PackedInt32Array(186, 184, 187), PackedInt32Array(189, 188, 190), PackedInt32Array(190, 188, 191), PackedInt32Array(195, 194, 196), PackedInt32Array(196, 194, 192), PackedInt32Array(192, 194, 193), PackedInt32Array(198, 197, 199), PackedInt32Array(199, 197, 200), PackedInt32Array(202, 201, 203), PackedInt32Array(203, 201, 204), PackedInt32Array(207, 206, 205), PackedInt32Array(209, 208, 210), PackedInt32Array(210, 208, 211), PackedInt32Array(213, 212, 214), PackedInt32Array(214, 212, 215), PackedInt32Array(215, 212, 216), PackedInt32Array(216, 212, 217)]
agent_radius = 2.0

[sub_resource type="BoxMesh" id="BoxMesh_5kd1b"]

[sub_resource type="BoxShape3D" id="BoxShape3D_dk7vn"]

[sub_resource type="BoxMesh" id="BoxMesh_aj7l6"]
size = Vector3(10, 0.1, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_0qeht"]
size = Vector3(10, 0.1, 10)

[sub_resource type="Curve3D" id="Curve3D_xuqpc"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -60.0748, 0, -53.793, 0, 0, 0, 0, 0, 0, -0.36409, 0, -86.2893, 0, 0, 0, 0, 0, 0, 55.7057, 0, -51.7007, 0, 0, 0, 0, 0, 0, 85.197, 0, -1.82045, 0, 0, 0, 0, 0, 0, 56.798, 0, 50.6085, 0, 0, 0, 0, 0, 0, 0.36409, 0, 76.8229, 0, 0, 0, 0, 0, 0, -51.3366, 0, 48.0598, 0, 0, 0, 0, 0, 0, -80.8279, 0, -6.55361, 0, 0, 0, 0, 0, 0, -60.0748, 0, -52.793),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 9

[node name="Level3" type="Node3D"]
script = ExtResource("1_awbue")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_kury7")

[node name="PlayerTank" parent="." groups=["player"] instance=ExtResource("2_jvhss")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.38488, 1.68043, 1.1244)
move_speed = 32
turn_speed = 4

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.611527, 0.159098, -0.775063, 0, 0.979575, 0.201079, 0.791224, 0.122965, -0.599037, -0.459754, 6.39808, 0)

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_txjhr")

[node name="obstacle_tmp" type="StaticBody3D" parent="NavigationRegion3D"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -6, 2, 0.123876)

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/obstacle_tmp"]
mesh = SubResource("BoxMesh_5kd1b")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/obstacle_tmp"]
shape = SubResource("BoxShape3D_dk7vn")

[node name="obstacle_tmp2" type="StaticBody3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 2, -11.8761)

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/obstacle_tmp2"]
transform = Transform3D(1.41421, 0, -7.07107, 0, 1, 0, 1.41421, 0, 7.07107, -1, 0, 2)
mesh = SubResource("BoxMesh_5kd1b")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/obstacle_tmp2"]
shape = SubResource("BoxShape3D_dk7vn")

[node name="obstacle_tmp6" type="StaticBody3D" parent="NavigationRegion3D"]
transform = Transform3D(0.258819, 0, 0.965926, 0, 1, 0, -0.965926, 0, 0.258819, -25, 2, -11.8761)

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/obstacle_tmp6"]
transform = Transform3D(1.41421, 0, -7.07107, 0, 1, 0, 1.41421, 0, 7.07107, -1, 0, 2)
mesh = SubResource("BoxMesh_5kd1b")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/obstacle_tmp6"]
shape = SubResource("BoxShape3D_dk7vn")

[node name="obstacle_tmp3" type="StaticBody3D" parent="NavigationRegion3D"]
transform = Transform3D(0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, 0.5, 20, 2, -11.8761)

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/obstacle_tmp3"]
transform = Transform3D(1.41421, 0, -7.07107, 0, 1, 0, 1.41421, 0, 7.07107, -1, 0, 2)
mesh = SubResource("BoxMesh_5kd1b")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/obstacle_tmp3"]
shape = SubResource("BoxShape3D_dk7vn")

[node name="obstacle_tmp4" type="StaticBody3D" parent="NavigationRegion3D"]
transform = Transform3D(0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, 0.5, 9, 2, -4.8761)

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/obstacle_tmp4"]
transform = Transform3D(1.41421, 0, -7.07107, 0, 1, 0, 1.41421, 0, 7.07107, -1, 0, 2)
mesh = SubResource("BoxMesh_5kd1b")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/obstacle_tmp4"]
shape = SubResource("BoxShape3D_dk7vn")

[node name="obstacle_tmp5" type="StaticBody3D" parent="NavigationRegion3D"]
transform = Transform3D(0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, 0.5, 30, 2, -4.8761)

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/obstacle_tmp5"]
transform = Transform3D(1.41421, 0, -7.07107, 0, 1, 0, 1.41421, 0, 7.07107, -1, 0, 2)
mesh = SubResource("BoxMesh_5kd1b")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/obstacle_tmp5"]
shape = SubResource("BoxShape3D_dk7vn")

[node name="Ground" type="MeshInstance3D" parent="NavigationRegion3D"]
transform = Transform3D(50, 0, 0, 0, 10, 0, 0, 0, 50, 0, 0, 0)
material_override = ExtResource("4_3gpbg")
mesh = SubResource("BoxMesh_aj7l6")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="NavigationRegion3D/Ground"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/Ground/StaticBody3D"]
shape = SubResource("BoxShape3D_0qeht")

[node name="HealthCrate" parent="NavigationRegion3D" instance=ExtResource("5_nvv82")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11, 1, 16)

[node name="ShellCrate" parent="NavigationRegion3D" instance=ExtResource("6_ad2oa")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 1, 13)

[node name="PauseMenu" parent="." instance=ExtResource("7_1uvfy")]
visible = false

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_xuqpc")

[node name="SpawnPathLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(0.478021, 0, -0.878345, 0, 1, 0, 0.878345, 0, 0.478021, -60.0748, 0, -53.793)
rotation_mode = 1

[node name="ExtractionTimer" type="Timer" parent="."]
wait_time = 32.0
one_shot = true
autostart = true

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ExtractionTimerLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = 34.0
offset_right = 61.0
offset_bottom = 122.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="ExtractionTimer" to="." method="_on_extraction_timer_timeout"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
